@startuml class-diagram
!pragma layout smetana
title TripTailor - Class Diagram

class Trip {
  +UUID id
  +String destination
  +Date startDate
  +Date endDate
  +String vibe
}

class Day {
  +UUID id
  +Date date
  +UUID tripId
}

class Activity {
  +UUID id
  +String title
  +String description
  +Integer durationMinutes
  +TimeBlock timeBlock
  +UUID dayId
  +Set<ActivityTag> tags
  +Boolean? isIndoor
}

enum TimeBlock {
  MORNING
  NOON
  AFTERNOON
  EVENING
  NIGHT
}

enum ActivityTag {
  OUTDOOR
  INDOOR
  CULTURAL
  SPORTY
  RELAXING
  ADVENTUROUS
  FOOD
  SHOPPING
  ENTERTAINMENT
  FAMILY_FRIENDLY
  PARTY
}

class Traveler {
  +UUID id
  +String? email
  +String? passwordHash
  +Boolean isDemo
  +Instant createdAt
}

Traveler "1" --> "*" Trip : owns
Trip "1" --> "*" Day : contains
Day "1" --> "*" Activity : contains

@enduml
